--- a/Homepage.html
+++ b/Homepage.html
@@ -7,6 +7,7 @@
       <a href = "#"> Contact | </a>
     </nav>
     <h1>My learning Git Homepage</h1>
+    <h2>This is done by Lee Jiun Yih. </h2>
     <p>This is the paragraph written for my UECS2363 first practical on Git and Github. </p>
   </body>
 </html>
