--- a/Homepage.html
+++ b/Homepage.html
@@ -5,6 +5,7 @@
       <a href = "#"> Home | </a>
       <a href = "#"> About | </a>
       <a href = "#"> Contact | </a>
+      <a href = "#"> Sponsors </a>
     </nav>
     <h1>My learning Git Homepage</h1>
     <h2>This is done by Lee Jiun Yih. </h2>
