--- a/Homepage.html
+++ b/Homepage.html
@@ -10,5 +10,6 @@
     <h1>My learning Git Homepage</h1>
     <h2>This is done by Lee Jiun Yih. </h2>
     <p>This is the paragraph written for my UECS2363 first practical on Git and Github. </p>
+    <p>Testing on failed to automatically merge.</p>
   </body>
 </html>
