--- a/Homepage.html
+++ b/Homepage.html
@@ -9,6 +9,7 @@
     </nav>
     <h1>My learning Git Homepage</h1>
     <h2>This is done by Lee Jiun Yih. </h2>
+    <p> Testing as well </p>
     <p>This is the paragraph written for my UECS2363 first practical on Git and Github. </p>
   </body>
 </html>
