--- a/Homepage.html
+++ b/Homepage.html
@@ -12,5 +12,6 @@
     <p> Testing as well </p>
     <p>This is the paragraph written for my UECS2363 first practical on Git and Github. </p>
     <p>Testing on failed to automatically merge.</p>
+    <h2>I see you.</h2>
   </body>
 </html>
